Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1821

Noisy warning from catalog manager

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 1.3.0
    • master

    Description

      On startup, the catalog manager often emits this warning:

      W0104 16:34:39.405272 2555 catalog_manager.cc:365] Catalog manager background task thread going to sleep: Service unavailable: Catalog manager is not initialized. State: 1

      This is because we wait to flip the catalog manager state to 'running' until after starting the background task thread. We could either change where the state change happens, or we could just ignore 'ServiceUnavailable' status instead of warning it.

      Attachments

        Activity

          People

            junhe Jun He
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: