KUDU-1821. Noisy warning from catalog manager

This commit changes the LOG if the catalog manager is trying to start.
Add additional if statements for this case to show more details.

Change-Id: I6a9b8577e4d857c63df6e66c10d6cf20270cd41e
Reviewed-on: http://gerrit.cloudera.org:8080/5637
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>
Reviewed-by: Adar Dembo <adar@cloudera.com>